Document null-probing semantic differences in singleton migrations (#1081)
`List.of(..)`, `Set.of(..)`, and `Map.of(..)` throw `NullPointerException`
when probed with `contains(null)` and friends, whereas the
`Collections.singleton*` factories return `false`/`-1`/`null`. Call this
out in each recipe description so users can decide whether the migration
is safe for their code. Also fixes a `Set.Of` typo.