@@ -36,7 +36,9 @@ public class MigrateCollectionsSingletonSet extends Recipe {
     final String displayName = "Prefer `Set.of(..)`";
 
     @Getter
-    final String description = "Prefer `Set.Of(..)` instead of using `Collections.singleton()` in Java 9 or higher.";
+    final String description = "Prefer `Set.of(..)` instead of using `Collections.singleton()` in Java 9 or higher. " +
+            "Note that the resulting `Set` is not behaviorally equivalent: `Set.of(..)` throws `NullPointerException` when probed with `contains(null)`, " +
+            "whereas `Collections.singleton(..)` returns `false`.";
 
     @Override
     public TreeVisitor<?, ExecutionContext> getVisitor() {
